      expans43.asm.
   -  a constant defined via EQU could have been changed to an assembly-time
      variable if the value didn't change; see equate30.asm.
   -  if two relocatable items belonging to different segments were 
      subtracted in an expression on the right side of EQU, strange error 
      "symbol redefinition" was emitted when that symbol was used later; see
      equate31.asm.

   Other changes:
   -  error "too many segments/sections defined..." emitted for omf and coff
      if the number of segments/sections cannot be handled by those formats.
   -  warning "64-bit label referenced with 32-bit fixup", introduced in v2.14,
      will be emitted at level 4 only if the code referencing the label isn't
      64-bit.
   -  format coff: warning "Output format doesn't support anonymous fixups..."
      displayed if a segment override other than FLAT: is used without symbol.
   -  .model flat directive in 64-bit is now rejected in omf format.
   -  warning displayed in binary formats if a linker directive section is
      detected.
   -  warning displayed for PUSHW/PUSHD if operand is a segment register and
      the size suffix doesn't match the current mode; see pushwsr.asm and
      pushdsr.asm.
   -  if user-defined prologue returns 0, offsets of local variables are no
      longer "adjusted". This is undocumented Masm behavior; see prolog3.asm.
   -  directive OPTION READONLY will no longer cause an error, just a warning
      that it's ignored.

   20.12.2020, v2.14:

   Bugfixes:
   -  regression in v2.13: if a not yet defined segment was added to a group,
      it got the current offset size, which caused an error if this wasn't the
      offset size when the segment was created; see group5.asm.
   -  there was still the possibility that segments with different offset 
      sizes were added to the same group; see group6.asm.
   -  string operation MOVSx with operands: if destination got an override 